--- a/main.css
+++ b/main.css
@@ -13,7 +13,16 @@ body {
 
 [class*="col-"] {
     float: left;
-
+}
+button {
+    border-radius:30%;
+    width: 90px;
+    padding: 3px;
+    margin-top: 5px;
+}
+input {
+    border-radius:10%;
+    padding: 3px;
 }
 #passeggero {
     color: black;
