--- a/main.css
+++ b/main.css
@@ -5,9 +5,9 @@
 }
 body {
     background-color: lightblue;
-    /* background-image: url(https://www.sap-nazionale.org/2016/wp-content/uploads/trenitalia-1.jpg);
+    background-image: url(https://www.travelquotidiano.com/wp-content/uploads/2019/02/Trenitalia-1-1024x684.jpg);
     background-repeat: no-repeat;
-    background-size:cover; */
+    background-size:cover;
 
 }
 
@@ -26,6 +26,23 @@ input {
 }
 #passeggero {
     color: black;
+    font-size: 30px;
+}
+#offerta {
+    color: black;
+    font-size: 30px;
+}
+#carrozza{
+    color: black;
+    font-size: 40px;
+}
+#cp{
+    color: black;
+    font-size: 40px;
+}
+#prezzo{
+    color: black;
+    font-size: 40px;
 }
 
 h1 {
@@ -44,6 +61,10 @@ h3 {
     text-align: center;
 
 }
+h4 {
+    font-size: 30px;
+    color: blue;
+}
 .selettori {
     background-color: orange;
     height: 100px;
@@ -52,8 +73,8 @@ h3 {
 }
 .selettori2 {
     background-color: orange;
-    /* height: 100px; */
-    margin-top: 50px;
+    height: 200px;
+    margin-top: 150px;
     margin-left: 50px;
 }
 .titolo {
